force-app/main/default/objects/Product2/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>