force-app/main/default/objects/Product2/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <label>Images</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>