force-app/main/default/objects/Product2/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>